Made time red when less than 10% left. Fixed currene event not showing in timetable.

--- a/src/components/sidebar/category.css
+++ b/src/components/sidebar/category.css
@@ -45,6 +45,11 @@
     grid-column: 6 / 9;
 }
 
+.warning {
+    font-weight: bold;
+    color: red;
+}
+
 
 .play, .stop, .countdown {
     width: 25px;
